Adding Groq Contraints & Adding status for AI